# sample-dns

./: Cargo.toml  install.sh
src/: cli.rs  dns.rs  logging.rs  main.rs  server.rs
src/cli/: args.rs
src/dns/: cache.rs  header.rs  parser.rs  record.rs  tests.rs  types.rs
systemd/: sample-dns.service
