[package]
name = "sample-dns"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.46", features = ["derive"] }
hyper = "1.7.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
parking_lot = "0.12"
once_cell = "1.18"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
